[package]
name = "drs-0x01"
version = "0.3.0"
authors = ["Paul Florence <perso@florencepaul.com>"]
description = "Easily communicate with Dongbu Robot servomotors Herkulex DRS 0101 and DRS 0201"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["Herkulex", "Dongbu", "servo" ,"servomotor", "motor"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/gbip/drs_0x01_driver"

[dependencies]
try_from = {version = "0.3.0", features = ["no_std"]}

[dependencies.arrayvec]
default-features = false
features = []
version = "0.4.7"

[dev-dependencies]
docmatic = "0.1"
